--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, novel fun travel">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
   <link rel="stylesheet" href="temp/styles/styles.css">
-  <script src="/temp/js/vendor.js"></script>
+  <script src="temp/js/vendor.js"></script>
 </head>
 <body>
   <header class="site-header">
